--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "hbs": "~3.1.0",
+    "express-handlebars": "^3.0.0",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
     "serve-favicon": "~2.3.0"
